src/test/deca/codegen/extension/valid/oracle/TAB_huge_vector.deca
{
    float[] vec = float[600];
    int[] vec2 = int[80000];
}