src/test/deca/codegen/extension/invalid/black-box/TAB_huge_vector.deca
{
    float[] vec = new float[600];
    int[] vec2 = new int[80000];
}